--- a/zuul.d/component-pipeline-master.yaml
+++ b/zuul.d/component-pipeline-master.yaml
@@ -17,6 +17,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-baremetal-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-baremetal-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-baremetal-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-baremetal-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-baremetal-promote-consistent-to-component-ci-testing
     openstack-component-cinder:
       jobs:
@@ -30,6 +33,9 @@
             dependencies:
               - periodic-tripleo-centos-8-master-component-cinder-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-cinder-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-cinder-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-cinder-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-cinder-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-cinder-promote-consistent-to-component-ci-testing
@@ -47,6 +53,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-clients-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-clients-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-clients-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-clients-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-clients-promote-consistent-to-component-ci-testing
     openstack-component-cloudops:
       jobs:
@@ -60,6 +69,9 @@
             dependencies:
               - periodic-tripleo-centos-8-master-component-cloudops-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-cloudops-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-cloudops-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-cloudops-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-cloudops-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-cloudops-promote-consistent-to-component-ci-testing
@@ -86,6 +98,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-common-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-common-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-common-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-common-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-common-promote-consistent-to-component-ci-testing
     openstack-component-compute:
       jobs:
@@ -107,6 +122,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-compute-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-compute-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-compute-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-compute-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-compute-promote-consistent-to-component-ci-testing
     openstack-component-glance:
       jobs:
@@ -125,6 +143,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-glance-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-glance-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-glance-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-glance-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-glance-promote-consistent-to-component-ci-testing
     openstack-component-manila:
       jobs:
@@ -132,6 +153,9 @@
             dependencies:
               - periodic-tripleo-centos-8-master-component-manila-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-manila-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-manila-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-manila-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-manila-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-manila-promote-consistent-to-component-ci-testing
@@ -161,6 +185,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-network-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-network-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-network-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-network-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-network-promote-consistent-to-component-ci-testing
     openstack-component-octavia:
       jobs:
@@ -182,6 +209,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-octavia-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-octavia-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-octavia-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-octavia-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-octavia-promote-consistent-to-component-ci-testing
     openstack-component-security:
       jobs:
@@ -200,6 +230,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-security-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-security-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-security-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-security-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-security-promote-consistent-to-component-ci-testing
     openstack-component-swift:
       jobs:
@@ -207,6 +240,9 @@
             dependencies:
               - periodic-tripleo-centos-8-master-component-swift-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-swift-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-swift-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-swift-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-swift-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-swift-promote-consistent-to-component-ci-testing
@@ -236,6 +272,9 @@
         - periodic-tripleo-ci-centos-8-standalone-tripleo-master-validation:
             dependencies:
               - periodic-tripleo-centos-8-master-component-tripleo-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-tripleo-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-tripleo-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-tripleo-promote-consistent-to-component-ci-testing
     openstack-component-tempest:
       jobs:
@@ -251,6 +290,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-tempest-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-tempest-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-tempest-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-tempest-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-tempest-promote-consistent-to-component-ci-testing
     openstack-component-ui:
       jobs:
@@ -258,6 +300,9 @@
             dependencies:
               - periodic-tripleo-centos-8-master-component-ui-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-ui-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-ui-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-ui-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-ui-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-ui-promote-consistent-to-component-ci-testing
@@ -270,6 +315,9 @@
             dependencies:
               - periodic-tripleo-centos-8-master-component-validation-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-validation-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-validation-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-validation-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-validation-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-master-component-validation-promote-consistent-to-component-ci-testing
