--- a/zuul.d/component-pipeline-ussuri.yaml
+++ b/zuul.d/component-pipeline-ussuri.yaml
@@ -14,6 +14,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-baremetal-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-baremetal-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-baremetal-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-baremetal-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-baremetal-promote-consistent-to-component-ci-testing
     openstack-component-cinder:
       jobs:
@@ -27,6 +30,9 @@
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-cinder-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-cinder-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-cinder-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-cinder-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-cinder-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-cinder-promote-consistent-to-component-ci-testing
@@ -44,6 +50,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-clients-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-clients-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-clients-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-clients-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-clients-promote-consistent-to-component-ci-testing
     openstack-component-cloudops:
       jobs:
@@ -57,6 +66,9 @@
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-cloudops-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-cloudops-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-cloudops-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-cloudops-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-cloudops-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-cloudops-promote-consistent-to-component-ci-testing
@@ -83,6 +95,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-common-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-common-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-common-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-common-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-common-promote-consistent-to-component-ci-testing
     openstack-component-compute:
       jobs:
@@ -96,6 +111,9 @@
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-compute-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-compute-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-compute-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-compute-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-compute-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-compute-promote-consistent-to-component-ci-testing
@@ -116,6 +134,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-glance-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-glance-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-glance-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-glance-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-glance-promote-consistent-to-component-ci-testing
     openstack-component-manila:
       jobs:
@@ -123,6 +144,9 @@
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-manila-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-manila-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-manila-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-manila-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-manila-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-manila-promote-consistent-to-component-ci-testing
@@ -149,6 +173,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-network-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-network-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-network-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-network-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-network-promote-consistent-to-component-ci-testing
     openstack-component-octavia:
       jobs:
@@ -170,6 +197,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-octavia-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-octavia-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-octavia-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-octavia-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-octavia-promote-consistent-to-component-ci-testing
     openstack-component-security:
       jobs:
@@ -188,6 +218,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-security-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-security-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-security-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-security-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-security-promote-consistent-to-component-ci-testing
     openstack-component-swift:
       jobs:
@@ -195,6 +228,9 @@
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-swift-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-swift-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-swift-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-swift-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-swift-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-swift-promote-consistent-to-component-ci-testing
@@ -221,6 +257,9 @@
         - periodic-tripleo-ci-centos-8-standalone-upgrade-tripleo-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-tripleo-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-tripleo-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-tripleo-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-tripleo-promote-consistent-to-component-ci-testing
     openstack-component-tempest:
       jobs:
@@ -236,6 +275,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-tempest-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-tempest-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-tempest-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-tempest-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-tempest-promote-consistent-to-component-ci-testing
     openstack-component-ui:
       jobs:
@@ -245,6 +287,9 @@
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-ui-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-ui-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-ui-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-ui-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-ui-promote-consistent-to-component-ci-testing
     openstack-component-validation:
       jobs:
@@ -252,6 +297,9 @@
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-validation-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-validation-ussuri:
+            dependencies:
+              - periodic-tripleo-centos-8-ussuri-component-validation-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-validation-ussuri:
             dependencies:
               - periodic-tripleo-centos-8-ussuri-component-validation-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-ussuri-component-validation-promote-consistent-to-component-ci-testing
